# qfield_checker

./: .gitignore  Makefile  README.md  pyproject.toml
qfield_checker/: checks.py  cli.py  columns.py  config.py  qfield.py  runner.py
